--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -265,6 +265,8 @@
   height: 160px;
   overflow: hidden;
   padding-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 
   &__first {
     width: 70%;
@@ -276,7 +278,7 @@
 
     &_image1 {
       width: 100%;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
       // animation-delay: 2s;
     }
 
@@ -285,7 +287,7 @@
       top: -15px;
       right: -10px;
       width: 30px;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
       animation-delay: 0.2s;
     }
 
@@ -297,7 +299,7 @@
       color: $darkBlue;
       font-size: 12px;
       font-weight: 600;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
     }
   }
 
@@ -311,7 +313,7 @@
 
     &_image1 {
       width: 100%;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
       animation-delay: 0.4s;
     }
 
@@ -320,7 +322,7 @@
       top: -15px;
       left: -10px;
       width: 30px;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
       animation-delay: 0.5s;
     }
 
@@ -332,7 +334,7 @@
       color: $white;
       font-size: 12px;
       font-weight: 600;
-      animation: image1-animation 3s ease-in-out infinite;
+      animation: image1-animation 4s ease-in-out infinite;
       animation-delay: 0.4s;
     }
   }
@@ -346,6 +348,9 @@
     transform: translateY(0);
   }
   35% {
+    transform: translateY(0);
+  }
+  55% {
     transform: translateY(0);
   }
   65% {
