--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -65,3 +65,30 @@
     background-size: 89%;
   }
 }
+
+@keyframes image1-animation {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0);
+  }
+  35% {
+    transform: translateY(0);
+  }
+  55% {
+    transform: translateY(0);
+  }
+  65% {
+    transform: translateY(200px);
+  }
+  75% {
+    transform: translateY(0);
+  }
+  85% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
